Fixed test issues
Fixed test issues by adding new or updating incorrect surfire command line arguments that allow tests access to modules